Use JDK 8 for Gradle, fix errors